# liber

./: .gitignore  README.md  pyproject.toml
src/liber/: __init__.py  bibtex.py  cli.py  library.py  models.py  web.py
src/liber/templates/: add.html  add_pdf.html  base.html  edit_bibtex.html  index.html  notes.html  paper.html  search.html
tests/: conftest.py  test_bibtex.py  test_cli.py  test_library.py  test_web.py
