[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liber"
version = "0.1.0"
description = "A command-line tool to manage academic research literature"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "flask>=3.0",
]

[project.scripts]
liber = "liber.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
liber = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
